fix: burger visibility display

--- a/src/components/header/menu/burger-menu/burger-menu.scss
+++ b/src/components/header/menu/burger-menu/burger-menu.scss
@@ -1,39 +1,36 @@
-.burgerMenu{
+.burgerItem {
   position: fixed;
-  top:10%;
-  left: 0px; 
+  top: 10%;
+  left: 0px;
   width: 100%;
   height: 100%;
   z-index: 30;
-  background-color:black;
-  color:#ffffff;
-  opacity: 0.7;
+  background-color: rgba(18, 18, 18, 0.8);
+  color: #ffffff;
   padding: 20px 0px 0px 0px;
-overflow: auto;
-  transform: translateX( -100%);
+  overflow: auto;
+  transform: translateX(-100%);
   transition: all 1s;
-    .burgerBtn{
-        display: flex;
-        font-size: 24px;
-        padding: 15px;
-        &:hover{
-          
-            background-color:rgb(12, 10, 10);
-        }
+  .burgerMenu {
+    display: flex;
+    font-size: 24px;
+    padding: 15px;
+    &:hover {
+      background-color: rgb(12, 10, 10);
     }
+  }
 }
 
-.burgerMenu.active{
-    transform: translateX(0%);  
+.burgerItem.active {
+  transform: translateX(0%);
 }
-@media all and (min-width: 997px){
-    .burgerMenu.active{
-        transform: translateX(-100%);  
-    }
+@media all and (min-width: 997px) {
+  .burgerItem.active {
+    transform: translateX(-100%);
+  }
 }
-@media all and (max-width: 550px){
-    .burgerMenu{
-        top:14%;
-       
-    }  
+@media all and (max-width: 550px) {
+  .burgerItem {
+    top: 14%;
+  }
 }
